--- a/UT4/Ejercicio04/index.html
+++ b/UT4/Ejercicio04/index.html
@@ -12,14 +12,24 @@
 <body>
 
 <header>
-    <h1>Título de lo que sea</h1>
+    <h1>Ergast, registros históricos de datos de carreras de motor</h1>
+    <input type="button" class="boton" name="boton" id="boton" value="Cargar Resultados">
 </header>
 
 <main>
     <table id="tabla">
-
+        <thead>
+            <tr>
+                <td>Id</td>
+                <td>Piloto</td>
+                <td>Equipo</td>
+                <td>Posición</td>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
     </table>
-    <input type="button" class="boton" name="boton" value="Cargar Resultados">
+
 </main>
 
 
