--- a/UT3/TAREA03/index.html
+++ b/UT3/TAREA03/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Tarea3</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/tarea3.css">
 </head>
 
@@ -22,7 +22,8 @@
       </div>
       <div class="form-group">
         <label for="descripcion">Descripción</label>
-        <textarea class="form-control" id="descripcion" name="descripcion" rows="3" placeholder="Descripción"></textarea>
+        <textarea class="form-control" id="descripcion" name="descripcion" rows="3"
+          placeholder="Descripción"></textarea>
         <div class="invalid-feedback">El campo descripción es necesario.</div>
       </div>
       <div class="form-group">
@@ -60,7 +61,8 @@
           <input type="checkbox" class="custom-control-input" id="checkDomingo" name="dias" value="0" checked>
           <label class="custom-control-label" for="checkDomingo">Dom</label>
         </div>
-        <div class="text-danger d-none" id="diasError"><small>Debes seleccionar al menos un día de apertura.</small></div>
+        <div class="text-danger d-none" id="diasError"><small>Debes seleccionar al menos un día de apertura.</small>
+        </div>
       </div>
       <div class="form-group">
         <label for="telefono">Número de teléfono</label>
@@ -78,35 +80,9 @@
     </form>
 
     <div id="placesContainer" class="card-columns">
-      <!-- EJEMPLO DE CÓMO SE AÑADE UN RESTAURANTE NUEVO: -->
-      <!-- <div class="card">
-        <img class="card-img-top" src="./rest1.jpg">
-        <div class="card-body">
-          <h5 class="card-title">Nombre del restaurante</h5>
-          <p class="card-text">Aquí la descripción.</p>
-          <div class="card-text">
-            <small class="text-muted">
-              <strong>Abre: </strong>Lun, Mar, Mié, Jue, Vie, Sáb, Dom
-            </small>
-            <span class="badge badge-success">Abierto</span>
-            <span class="badge badge-danger">Cerrado</span>
-          </div>
-          <div class="card-text">
-            <small class="text-muted">
-              <strong>Teléfono: </strong>934823234
-            </small>
-          </div>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">
-            Tipo de Cocina
-          </small>
-        </div>
-      </div> -->
     </div>
-  </div>
 
-  <script src="js/tarea3.js"></script>
+    <script src="js/tarea3.js"></script>
 </body>
 
 </html>
