--- a/UT4/TAREA02/index.html
+++ b/UT4/TAREA02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width">
     <meta content="author" name="Ignacio Ormaeche Carral">
 </head>
 
