--- a/RepasoExamen/EjerSamLeeRepaso/Repaso-Tabla/index.html
+++ b/RepasoExamen/EjerSamLeeRepaso/Repaso-Tabla/index.html
@@ -51,6 +51,9 @@
     <div id="botones">
         <button id="nuevaColumna">Nueva Columna</button>
         <button id="nuevaFila">Nueva Fila</button>
+        <button id="eliminarUltimaFila">Eliminar Última Fila</button>
+        <button id="eliminarUltimaColumna">Eliminar Última Columna</button>
+
         <button id="resetearTabla">Resetear Tabla</button>
     </div>
     <script src="js/main.js"></script>
