--- a/RepasoExamen/EjerSamLeeRepaso/Repaso-Tabla/index3.html
+++ b/RepasoExamen/EjerSamLeeRepaso/Repaso-Tabla/index3.html
@@ -14,6 +14,10 @@
     <button id="nuevaColumna">Nueva Columna</button>
     <button id="nuevaFila">Nueva Fila</button>
     <button id="resetearTabla">Resetear Tabla</button>
+    <!-- Agrega estos botones en tu HTML -->
+    <button id="eliminarUltimaFila">Eliminar Última Fila</button>
+    <button id="eliminarUltimaColumna">Eliminar Última Columna</button>
+
 </div>
 <script src="js/main3.js"></script>
 </body>
